# post_learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: sentiment_3cls.yaml
scripts/: .env.example  .gitignore  README.md  conda-env.yml  eval_sentiment.py  infer_sentiment.py  prepare_dataset.py  prepare_dpo_sst2.py  prepare_sft_sst2.py  run_dpo.sh  run_sft.sh  setup_env.sh  train_dpo.py  train_sentiment.py  train_sft.py
scripts/configs/: sentiment_3cls.yaml
scripts/scripts/: download_sst2.py  infer_sentiment.py
scripts/src/post_train_learn/datasets/: sentiment.py
scripts/src/post_train_learn/train/: README.md
src/post_train_learn/utils/: README.md
