[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "post-train-learn"
version = "0.1.0"
description = "Post-training experiments and utilities"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
